<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.tikalk.sunshine.sunshine">
    <com.tikalk.sunshine.sunshine.LocationEditTextPreference
        android:title="@string/pref_location_title" android:key="@string/pref_location_key" custom:minLength="3"
        android:defaultValue="@string/pref_location_defualt" android:inputType="text" android:singleLine="true"></com.tikalk.sunshine.sunshine.LocationEditTextPreference>
    <ListPreference
        android:title="@string/pref_temp_unit_title"
        android:key="@string/pref_temp_unit_key"
        android:summary="@string/pref_temp_unit_title_summary"
        android:entries="@array/pref_temp_unit_entries"
        android:entryValues="@array/pref_temp_unit_values"
        android:defaultValue="@string/pref_temp_units_default" >
    </ListPreference>
    <CheckBoxPreference android:key="@string/pref_notif_key" android:title="@string/pref_notif_title"   android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_notif_default_value"  />
</PreferenceScreen>